# improved_moove

./: .gitignore  README.md  pyproject.toml  pyqtgraph_poc.py
.github/workflows/: docs.yml  tests.yml
assets/: logo_128_white_bg.icns
conda.recipe/: conda_build_config.yaml  meta.yaml
docs/: split_rst.py
docs/source/: conf.py  faq.rst  index.rst  installation.rst  introduction.rst  loading_data.rst  moovegui.rst  moovetaf.rst  rec_file.rst  references.rst
moove/: app_state.py  moovegui.py  moovetaf.py  pg_canvas.py  qt_helpers.py  shortcuts.py
moove/templates/: recfile_template.jinja
moove/utils/: __init__.py  clustering_utils.py  dash_utils.py  file_utils.py  gui_utils.py  label_utils.py  movefuncs_utils.py  plot_utils.py  segment_utils.py  syllable_utils.py  training_utils.py  window_utils.py
tests/: conftest.py  test_audio_utils.py  test_augmentations.py  test_gui_cluster_window.py  test_gui_main_window.py  test_gui_relabel_window.py  test_gui_resegment_window.py  test_gui_syllable_editing.py  test_gui_training_window.py  test_gui_workflows.py  test_models.py  test_moovetaf.py  test_normalization.py  test_segmentation.py  test_training_inference.py
