[project]
name = "moove"
version = "1.1.0.post1"
description = "A tool for real-time syllable segmentation and classification of birdsong, designed to enable closed-loop experiments in vocal learning research."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nils Riekers"},
    {name = "Franziska Heubach"},
    {name = "Jacqueline Laura Goebl"},
    {name = "Lena Veit"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.9.0",
    "torch>=2.6.0",
    "evfuncs>=0.3.5.post1",
    "numpy>=2.1",
    "sounddevice>=0.5.0",
    "jinja2>=3.1.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.6",
    "dash>=2.17.1",
    "PyQt6>=6.5.0",
    "pillow>=10.0.0",
    "scipy>=1.13.0",
    "pyqtgraph>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/veitlab/moove"
Documentation = "https://veitlab.github.io/moove"
Repository = "https://github.com/veitlab/moove"

[project.scripts]
moovegui = "moove.moovegui:main"
moovetaf = "moove.moovetaf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moove"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-qt>=4.5.0",
]
